# turbocode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  all_tests.sh  pyproject.toml
.github/workflows/: publication.yml
src/pyturbocode/: TurboCodec.py  __init__.py
tests/: coverage.conf  test_codec.py
